--- a/style.css
+++ b/style.css
@@ -26,15 +26,15 @@ left: 120px;
 top: 285px;
 border-radius: 41px;
 margin-top: 80px;
+margin-bottom: 80px;
 }
 
 .img:hover.img{
     
     border-radius: 90px;
-   
     padding-left: 50px;
-    transform: scale(1) rotate(360deg);
-    transition: transform 2.5s ease-in-out;
+    transform: scale(.9) rotate(360deg);
+    transition: transform 4s ease-in-out;
 }
 /* span  */
 .pree-use-icon{
@@ -122,8 +122,13 @@ footer{
 /* media queries  */
 /* mob-dev  */
 @media only screen and(max-width:576px)  {
-    .body{
+    /* .body{
         grid-template-columns: repeat(1, 1fr);
+    } */
+    .productSection{
+      
+        grid-template-columns: repeat(2, 1fr);
+        padding: 0px 10px;
     }
 
     
